# fin-data

./: LICENSE  README.md  client.py  create_table.sql  mysql.yml  producer.py  pyproject.toml  rabbitmq.yml  router.py  tasks.py
financial_data/: config.py  producer.py  router.py  taifex_crawler.py  tpex_crawler.py  twse_crawler.py
financial_data/backend/db/: client.py  db.py  router.py
financial_data/crawler/: taiwan_stock_price.py
financial_data/schema/: dataset.py
financial_data/tasks/: task.py  tasks.py  worker.py
src/: taifex_crawler.py  tpex_crawler.py  twse_crawler.py
